// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpandingSearch /> should adopt props 1`] = `
<styled.div>
  <styled.input
    innerRef={[Function]}
    isExpanded={true}
    lang="ja"
    onChange={[Function]}
    onFocus={[Function]}
    value="検索"
  />
  <Styled(IconButton)
    bgColor="blueLight"
    color="whiteLight"
    isExpanded={true}
    isSubmitting={true}
    name="SYNC"
    size="32px"
    title="Searching..."
    type="submit"
  />
</styled.div>
`;

exports[`<ExpandingSearch /> should match baseline snapshot 1`] = `
<styled.div>
  <styled.input
    innerRef={[Function]}
    isExpanded={false}
    lang="ja"
    onChange={[Function]}
    onFocus={[Function]}
    value="検索"
  />
  <Styled(IconButton)
    bgColor="blueLight"
    color="whiteLight"
    isExpanded={false}
    isSubmitting={false}
    name="SEARCH"
    size="32px"
    title="Search vocabulary for: 検索"
    type="submit"
  />
</styled.div>
`;
